--- a/react/ts/index.html
+++ b/react/ts/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/runow.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React + TS</title>
+    <title>React + TypeScript</title>
   </head>
   <body>
     <div id="root"></div>
